@@ -9,3 +9,5 @@ function Home() {
 }
 
 export default Home
+// in the future, this page would include more information about the classes 
+// perhaps some videos
